--- a/package.json
+++ b/package.json
@@ -1,207 +1,222 @@
 {
-  
-  "name": "websitehelpme",
-  
-  "version": "0.1.0",
-  
-  "private": true,
-  
-  "dependencies": {
-  
-    
-  "@react-oauth/google": "^0.12.1",
-  
-    
-  "@testing-library/jest-dom": "^5.17.0",
-  
-    
-  "@testing-library/react": "^13.4.0",
-  
-    
-  "@testing-library/user-event": "^13.5.0",
-  
-    
-  "assert": "^2.1.0",
-  
-    
-  "axios": "^1.6.2",
-  
-    
-  "buffer": "^6.0.3",
-  
-    
-  "crypto-browserify": "^3.12.0",
-  
-    
-  "dotenv": "^16.3.1",
-  
-    
-  "express": "^4.18.2",
-  
-    
-  "gaxios": "^6.1.1",
-  
-    
-  "google-api-javascript-client": "^0.1.0",
-  
-    
-  "googleapis": "^129.0.0",
-  
-    
-  "https-browserify": "^1.0.0",
-  
-    
-  "os": "^0.1.2",
-  
-    
-  "path-browserify": "^1.0.1",
-  
-    
-  "process": "^0.11.10",
-  
-    
-  "querystring": "^0.2.1",
-  
-    
-  "react": "^18.2.0",
-  
-    
-  "react-dom": "^18.2.0",
-  
-    
-  "react-hook-form": "^7.49.2",
-  
-    
-  "react-icons": "^4.12.0",
-  
-    
-  "react-native": "^0.73.1",
-  
-    
-  "react-router-dom": "^6.21.0",
-  
-    
-  "react-scripts": "5.0.1",
-  
-    
-  "react-toastify": "^9.1.3",
-  
-    
-  "stream": "^0.0.2",
-  
-    
-  "stream-browserify": "^3.0.0",
-  
-    
-  "stream-http": "^3.2.0",
-  
-    
-  "styled-components": "^6.1.1",
-  
-    
-  "url": "^0.11.3",
-  
-    
-  "util": "^0.12.5",
-  
-    
-  "web-vitals": "^2.1.4",
-  
-    
-  "yup": "^1.3.3",
-  
-    
-  "zlib": "^1.0.5"
-  
-  },
-  
-  "scripts": {
-  
-    
-  "start": "react-scripts start",
-  
-    
-  "build": "react-scripts build",
-  
-    
-  "test": "react-scripts test",
-  
-    
-  "eject": "react-scripts eject",
-  
-    
-  "buildweb": "webpack"
-  
-  },
-  
-  "eslintConfig": {
-  
-    
-  "extends": [
-  
-    
-    
-  "react-app",
-  
-    
-    
-  "react-app/jest"
-  
-    
-  ]
-  
-  },
-  
-  "browserslist": {
-  
-    
-  "production": [
-  
-    
-    
-  ">0.2%",
-  
-    
-    
-  "not dead",
-  
-    
-    
-  "not op_mini all"
-  
-    
-  ],
-  
-    
-  "development": [
-  
-    
-    
-  "last 1 chrome version",
-  
-    
-    
-  "last 1 firefox version",
-  
-    
-    
-  "last 1 safari version"
-  
-    
-  ]
-  
-  },
-  
-  "devDependencies": {
-  
-    
-  "js-loader": "^0.1.1",
-  
-    
-  "jsx-loader": "^0.13.2",
-  
-    
-  "webpack-cli": "^5.1.4"
-  
-  }
+  
+ "name": "websitehelpme",
+  
+ "version": "0.1.0",
+  
+ "private": true,
+  
+ "dependencies": {
+  
+   
+ "@react-oauth/google": "^0.12.1",
+  
+   
+ "@testing-library/jest-dom": "^5.17.0",
+  
+   
+ "@testing-library/react": "^13.4.0",
+  
+   
+ "@testing-library/user-event": "^13.5.0",
+  
+   
+ "assert": "^2.1.0",
+  
+   
+ "axios": "^1.6.2",
+  
+   
+ "buffer": "^6.0.3",
+  
+   
+ "crypto-browserify": "^3.12.0",
+  
+   
+ "date-fns": "^3.2.0",
+  
+   
+ "dotenv": "^16.3.1",
+  
+   
+ "express": "^4.18.2",
+  
+   
+ "firebase": "^10.7.1",
+  
+   
+ "gaxios": "^6.1.1",
+  
+   
+ "google-api-javascript-client": "^0.1.0",
+  
+   
+ "googleapis": "^129.0.0",
+  
+   
+ "https-browserify": "^1.0.0",
+  
+   
+ "moment-timezone": "^0.5.44",
+  
+   
+ "os": "^0.1.2",
+  
+   
+ "path-browserify": "^1.0.1",
+  
+   
+ "process": "^0.11.10",
+  
+   
+ "querystring": "^0.2.1",
+  
+   
+ "react": "^18.2.0",
+  
+   
+ "react-calendar": "^4.8.0",
+  
+   
+ "react-dom": "^18.2.0",
+  
+   
+ "react-hook-form": "^7.49.2",
+  
+   
+ "react-icons": "^4.12.0",
+  
+   
+ "react-modal": "^3.16.1",
+  
+   
+ "react-native": "^0.73.1",
+  
+   
+ "react-router-dom": "^6.21.0",
+  
+   
+ "react-scripts": "5.0.1",
+  
+   
+ "react-toastify": "^9.1.3",
+  
+   
+ "stream": "^0.0.2",
+  
+   
+ "stream-browserify": "^3.0.0",
+  
+   
+ "stream-http": "^3.2.0",
+  
+   
+ "styled-components": "^6.1.1",
+  
+   
+ "url": "^0.11.3",
+  
+   
+ "util": "^0.12.5",
+  
+   
+ "web-vitals": "^2.1.4",
+  
+   
+ "yup": "^1.3.3",
+  
+   
+ "zlib": "^1.0.5"
+  
+ },
+  
+ "scripts": {
+  
+   
+ "start": "react-scripts start",
+  
+   
+ "build": "react-scripts build",
+  
+   
+ "test": "react-scripts test",
+  
+   
+ "eject": "react-scripts eject",
+  
+   
+ "buildweb": "webpack"
+  
+ },
+  
+ "eslintConfig": {
+  
+   
+ "extends": [
+  
+   
+   
+ "react-app",
+  
+   
+   
+ "react-app/jest"
+  
+   
+ ]
+  
+ },
+  
+ "browserslist": {
+  
+   
+ "production": [
+  
+   
+   
+ ">0.2%",
+  
+   
+   
+ "not dead",
+  
+   
+   
+ "not op_mini all"
+  
+   
+ ],
+  
+   
+ "development": [
+  
+   
+   
+ "last 1 chrome version",
+  
+   
+   
+ "last 1 firefox version",
+  
+   
+   
+ "last 1 safari version"
+  
+   
+ ]
+  
+ },
+  
+ "devDependencies": {
+  
+   
+ "js-loader": "^0.1.1",
+  
+   
+ "jsx-loader": "^0.13.2",
+  
+   
+ "webpack-cli": "^5.1.4"
+  
+ }
 }
