--- a/package.json
+++ b/package.json
@@ -8,153 +8,157 @@
 
  "dependencies": {
 
- "@react-oauth/google": "^0.12.1",
+  "@react-oauth/google": "^0.12.1",
 
- "@testing-library/jest-dom": "^5.17.0",
+  "@testing-library/jest-dom": "^5.17.0",
 
- "@testing-library/react": "^13.4.0",
+  "@testing-library/react": "^13.4.0",
 
- "@testing-library/user-event": "^13.5.0",
+  "@testing-library/user-event": "^13.5.0",
 
- "assert": "^2.1.0",
+  "assert": "^2.1.0",
 
- "axios": "^1.6.2",
+  "axios": "^1.6.2",
 
- "buffer": "^6.0.3",
+  "babel-polyfill": "^6.26.0",
 
- "crypto-browserify": "^3.12.0",
+  "buffer": "^6.0.3",
 
- "date-fns": "^3.2.0",
+  "crypto-browserify": "^3.12.0",
 
- "dotenv": "^16.3.1",
+  "date-fns": "^3.2.0",
 
- "express": "^4.18.2",
+  "dotenv": "^16.3.1",
 
- "firebase": "^10.7.1",
+  "draft-js": "^0.11.7",
 
- "gaxios": "^6.1.1",
+  "express": "^4.18.2",
 
- "google-api-javascript-client": "^0.1.0",
+  "firebase": "^10.7.1",
 
- "googleapis": "^129.0.0",
+  "gaxios": "^6.1.1",
 
- "https-browserify": "^1.0.0",
+  "google-api-javascript-client": "^0.1.0",
 
- "moment-timezone": "^0.5.44",
+  "googleapis": "^129.0.0",
 
- "os": "^0.1.2",
+  "https-browserify": "^1.0.0",
 
- "path-browserify": "^1.0.1",
+  "moment-timezone": "^0.5.44",
 
- "process": "^0.11.10",
+  "os": "^0.1.2",
 
- "querystring": "^0.2.1",
+  "path-browserify": "^1.0.1",
 
- "react": "^18.2.0",
+  "process": "^0.11.10",
 
- "react-calendar": "^4.8.0",
+  "querystring": "^0.2.1",
 
- "react-dom": "^18.2.0",
+  "quill": "^1.3.6",
 
- "react-hook-form": "^7.49.2",
+  "quill-image-resize-module": "^3.0.0",
 
- "react-icons": "^4.12.0",
+  "react": "^18.2.0",
 
- "react-modal": "^3.16.1",
+  "react-calendar": "^4.8.0",
 
- "react-native": "^0.73.1",
+  "react-dom": "^18.2.0",
 
- "react-router-dom": "^6.21.0",
+  "react-hook-form": "^7.49.2",
 
- "react-scripts": "5.0.1",
+  "react-icons": "^4.12.0",
 
- "react-toastify": "^9.1.3",
+  "react-modal": "^3.16.1",
 
- "stream": "^0.0.2",
+  "react-native": "^0.73.1",
 
- "stream-browserify": "^3.0.0",
+  "react-router-dom": "^6.21.0",
 
- "stream-http": "^3.2.0",
+  "react-scripts": "5.0.1",
 
- "styled-components": "^6.1.1",
+  "react-spring": "^9.7.3",
 
- "url": "^0.11.3",
+  "react-toastify": "^9.1.3",
 
- "util": "^0.12.5",
+  "stream": "^0.0.2",
 
- "web-vitals": "^2.1.4",
+  "stream-browserify": "^3.0.0",
 
- "yup": "^1.3.3",
+  "stream-http": "^3.2.0",
 
- "zlib": "^1.0.5"
+  "styled-components": "^6.1.1",
+
+  "url": "^0.11.3",
+
+  "util": "^0.12.5",
+
+  "web-vitals": "^2.1.4",
+
+  "yup": "^1.3.3",
+
+  "zlib": "^1.0.5"
 
  },
 
  "scripts": {
 
- "start": "react-scripts start",
+  "start": "react-scripts start",
 
- "build": "react-scripts build",
+  "build": "react-scripts build",
 
- "test": "react-scripts test",
+  "test": "react-scripts test",
 
- "eject": "react-scripts eject",
+  "eject": "react-scripts eject",
 
- "buildweb": "webpack"
+  "buildweb": "webpack"
 
  },
 
  "eslintConfig": {
 
- "extends": [
+  "extends": [
 
- 
- "react-app",
+   "react-app",
 
- 
- "react-app/jest"
+   "react-app/jest"
 
- ]
+  ]
 
  },
 
  "browserslist": {
 
- "production": [
+  "production": [
 
- 
- ">0.2%",
+   ">0.2%",
 
- 
- "not dead",
+   "not dead",
 
- 
- "not op_mini all"
+   "not op_mini all"
 
- ],
+  ],
 
- "development": [
+  "development": [
 
- 
- "last 1 chrome version",
+   "last 1 chrome version",
 
- 
- "last 1 firefox version",
+   "last 1 firefox version",
 
- 
- "last 1 safari version"
+   "last 1 safari version"
 
- ]
+  ]
 
  },
 
  "devDependencies": {
 
- "js-loader": "^0.1.1",
+  "js-loader": "^0.1.1",
 
- "jsx-loader": "^0.13.2",
+  "jsx-loader": "^0.13.2",
 
- "webpack-cli": "^5.1.4"
+  "webpack-cli": "^5.1.4"
 
  }
+
 }
+
