--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
 
   "quill": "^1.3.6",
 
+  "quill-delta-to-html": "^0.12.1",
+
   "quill-image-resize-module": "^3.0.0",
 
   "react": "^18.2.0",
