--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,12 @@
 {
   "short_name": "Help Me",
   "name": "Help Me",
+  "splash_screen": {
+    "full_screen": true,
+    "src": "logo512.png",
+    "type": "image/png",
+    "sizes": "512x512"
+  },
   "icons": [
     {
       "src": "favicon.ico",
