--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
 
  "dependencies": {
 
+  "@amcharts/amcharts5": "^5.8.7",
+
   "@react-oauth/google": "^0.12.1",
 
   "@testing-library/jest-dom": "^5.17.0",
@@ -23,6 +25,8 @@
   "babel-polyfill": "^6.26.0",
 
   "buffer": "^6.0.3",
+
+  "chart.js": "^4.4.2",
 
   "crypto-browserify": "^3.12.0",
 
@@ -43,6 +47,8 @@
   "googleapis": "^129.0.0",
 
   "https-browserify": "^1.0.0",
+
+  "js-cookie": "^3.0.5",
 
   "moment-timezone": "^0.5.44",
 
