--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
 
   "js-cookie": "^3.0.5",
 
+  "moment": "^2.30.1",
+
   "moment-timezone": "^0.5.44",
 
   "os": "^0.1.2",
@@ -71,6 +73,8 @@
   "react": "^18.2.0",
 
   "react-calendar": "^4.8.0",
+
+  "react-datepicker": "^6.9.0",
 
   "react-dom": "^18.2.0",
 
